--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <meta name="twitter:title" content="춘천아파트리모델링"/>
 <meta name="twitter:url" content="/"/>
 <meta name="twitter:image" content="https://financial.pstatic.net/insurance/insurance_car.png"/>
+<meta name="google-site-verification" content="Ch1yWk0osDMWz04XNTZ04nhF8jCo1Td789Q2Swikg_U" />
+<meta name="naver-site-verification" content="e18007a202ae1c606b8d45debc0e294f8fcd90d1" />
 
-
+	
 <meta name="subject" content="춘천아파트리모델링" />
 <meta name="publisher" content="춘천아파트리모델링" />
 <meta name="Other Agent" content="춘천아파트리모델링" />
@@ -633,9 +635,9 @@
       const second = String(kstDate.getSeconds()).padStart(2, '0');
 
       // YYYY-MM-DD 형식 (footer 보여주기용)
-      const formattedDate = 춘천아파트리모델링${year}-${month}-${day}춘천아파트리모델링;
+      const formattedDate = `${year}-${month}-${day}`;
       // ISO 8601 형식 (검색엔진이 가장 좋아하는 표준 포맷)
-      const isoDateTime = 춘천아파트리모델링${year}-${month}-${day}T${hour}:${minute}:${second}+09:00춘천아파트리모델링;
+      const isoDateTime = `${year}-${month}-${day}T${hour}:${minute}:${second}+09:00`;
       
       return { year, formattedDate, isoDateTime };
     }
@@ -689,7 +691,7 @@
     // 3. SEO 메타 태그 업데이트 (Naver/Google 공통)
     // ----------------------------------------------------------------------
     function setMetaTag(attrType, attrName, content) {
-      let selector = 춘천아파트리모델링meta[${attrType}="${attrName}"]춘천아파트리모델링;
+      let selector = `meta[${attrType}="${attrName}"]`;
       let meta = document.querySelector(selector);
       if (!meta) {
         meta = document.createElement('meta');
@@ -710,7 +712,7 @@
       setMetaTag('name', 'date', data.formattedDate);
 
       // (D) 저작권 정보 갱신 (네이버 소유 확인 시 참고)
-      setMetaTag('name', 'copyright', 춘천아파트리모델링${data.year} ${document.title}춘천아파트리모델링);
+      setMetaTag('name', 'copyright', `${data.year} ${document.title}`);
     }
 
     // ----------------------------------------------------------------------
@@ -748,7 +750,6 @@
     updateJsonLd(timeData);
   })();
 </script>
-
 
 
 
